Updated Dashboard and MarketPlace

--- a/slotswapper/backend/.env
+++ b/slotswapper/backend/.env
@@ -1,2 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb+srv://slotswapper_admin:slotswapper915@slotswapper.akmfgeh.mongodb.net/?appName=SlotSwapper
+JWT_SECRET=mySuperSecretKey
+
